--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "express": "4.16.3",
     "method-override": "2.3.10",
     "path": "0.12.7",
+    "pg": "7.4.3",
     "react": "16.4.1",
     "react-dom": "16.4.1",
     "react-router": "4.3.1",
-    "react-router-dom": "4.3.1"
+    "react-router-dom": "4.3.1",
+    "sequelize": "4.38.0"
   },
   "devDependencies": {
     "babel-core": "6.26.0",
