--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
     "body-parser": "1.18.3",
     "cors": "2.8.4",
     "express": "4.16.3",
+    "footprint-node": "1.1.0",
     "method-override": "2.3.10",
+    "mongodb-uri": "0.9.7",
+    "mongoose": "5.2.1",
     "path": "0.12.7",
     "pg": "7.4.3",
     "react": "16.4.1",
     "react-dom": "16.4.1",
     "react-router": "4.3.1",
-    "react-router-dom": "4.3.1",
-    "sequelize": "4.38.0"
+    "react-router-dom": "4.3.1"
   },
   "devDependencies": {
     "babel-core": "6.26.0",
