--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Benjamin Bestmann <benjamin@strivehq.com> (http://strivehq.com)",
   "license": "ISC",
   "dependencies": {
+    "antd": "3.6.5",
     "axios": "0.18.0",
     "body-parser": "1.18.3",
     "cors": "2.8.4",
